fix(transport): avoid raw List.of() inference causing Object -> Long issue; use typed emptyList for candidates loop